k8s/app01.yaml
apiVersion: v1
kind: Service
metadata:
  name: app01-service
  labels:
    app: app01
spec:
  ports:
  - name: app01-service-port
    protocol: TCP
    port: 80
    targetPort: 3000
  selector: # Automate to setup the endpoints
    app: app01
  # type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app01-deployment
  labels:
    app: app01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app01
      tier: backend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app01
        tier: backend
    spec:
      containers:
      - image: qtmsm/service01:v1.0.1
        name: app01-container
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
