k8s/app02.yaml
apiVersion: v1
kind: Service
metadata:
  name: app02-service
  labels:
    app: app02
spec:
  ports:
  - name: app02-service-port
    protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: app02
  # type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app02-deployment
  labels:
    app: app02
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app02
      tier: backend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app02
        tier: backend
    spec:
      containers:
      - image: qtmsm/service02:v1.0.2
        name: app02-container
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
          name: http-web-svc2
