k8s/app03.yaml
apiVersion: v1
kind: Service
metadata:
  name: app03-service
  labels:
    app: app03
spec:
  ports:
  - name: app03-service-port
    protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: app03
  # type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app03-deployment
  labels:
    app: app03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app03
      tier: backend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: app03
        tier: backend
    spec:
      containers:
      - image: qtmsm/service03:v1.0.6
        name: app03-container
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
          name: http-web-svc2
