k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /service01
        pathType: Prefix
        backend:
          service:
            name: app01-service
            port:
              number: 80
      - path: /service02
        pathType: Prefix
        backend:
          service:
            name: app02-service
            port:
              number: 80
      - path: /service03
        pathType: Prefix
        backend:
          service:
            name: app03-service
            port:
              number: 80
